Handle python/spark activity failure (#86)
* Minor: collect stream using .toList()

* Catch python activity failures and write error statuses for all hl7 files in manifest file